--- a/ocamlfuse.opam.template
+++ b/ocamlfuse.opam.template
@@ -1,2 +1,3 @@
 homepage: "http://sourceforge.net/apps/mediawiki/ocamlfuse"
+available: [ os != "oraclelinux-9" & os != "freebsd" ]
 x-ci-accept-failures: ["oraclelinux-7"]
