--- a/ocamlfuse.opam
+++ b/ocamlfuse.opam
@@ -41,6 +41,7 @@ build: [
     "@runtest" {with-test}
     "@doc" {with-doc}
   ]
+  ["dune" "install" "-p" name "--create-install-files" name]
 ]
 dev-repo: "git+https://github.com/astrada/ocamlfuse.git"
 homepage: "http://sourceforge.net/apps/mediawiki/ocamlfuse"
